# faux_planet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  premake5.lua
.github/workflows/: build.yaml  format.yaml
eng/: CMakeLists.txt
eng/include/: EntryPoint.h  log.h  test.h
eng/src/: application.cpp  application.h  eng.cpp  eng.h  engpch.h  entry_point.cpp  entry_point.h  log.cpp  log.h  test.cpp  test.h
eng/src/events/: base.h  events.h  key_event.h  mouse_event.h  window_event.h
eng/src/layers/: imgui_layer.h  layer.h  layer_stack.cpp  layer_stack.h
eng/src/window/: glfw_window.cpp  glfw_window.h  window_interface.h
faux_planet/: CMakeLists.txt
faux_planet/src/: application.cpp  application.h  hello.cpp  main.cpp
